WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
322782
Fix compilation issue with WK_WEB_EXTENSIONS_OFFSCREEN on iOS
https://bugs.webkit.org/show_bug.cgi?id=322782
Summary
Fix compilation issue with WK_WEB_EXTENSIONS_OFFSCREEN on iOS
Brian Weinstein
Reported
2026-08-27 18:41:35 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2026-08-27 18:41:37 PDT
<
rdar://problem/184269255
>
Brian Weinstein
Comment 2
2026-08-27 18:43:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/72670
EWS
Comment 3
2026-08-27 19:35:21 PDT
Committed
320015@main
(4ae53427d5d8): <
https://commits.webkit.org/320015@main
> Reviewed commits have been landed. Closing PR #72670 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug