Fix compilation issue with WK_WEB_EXTENSIONS_OFFSCREEN on iOS https://bugs.webkit.org/show_bug.cgi?id=322782 rdar://184269255

Reviewed by Timothy Hatcher.

-[UIWindow initWithFrame] is deprecated in iOS 26. Use -initWithWindowScene: instead, and have
the class choose a foreground scene to use.

* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPIOffscreenCocoa.mm:
(WebKit::windowScene):
(WebKit::WebExtensionContext::offscreenCreateDocument):

Canonical link: https://commits.webkit.org/320015@main